--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
         <input type="button" value="RGB">
         <input type="color" id="colorpicker" value="#0000ff">
         <input type="button" value="eraser">
+        <div class="sliderdiv">
+            <input type="range" id="slider" min="2" max="100" value="16">
+            <div class="value">16</div>
+        </div>
     </div>
 
     <div class="pad">
-        <!-- <div class="cell">1</div>
-        <div class="cell">2</div>
-        <div class="cell">3</div>
-        <div class="cell">4</div>
-        <div class="cell">5</div>
-        <div class="cell">6</div>
-        <div class="cell">7</div>
-        <div class="cell">8</div> -->
+        
     </div>
 
     <script src="script.js"></script>
