--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="color" id="colorpicker" value="#0000ff">
         <input type="button" value="eraser">
         <div class="sliderdiv">
-            <input type="range" id="slider" min="2" max="100" value="16" oninput="sliderFunc(this.value)">
+            <input type="range" id="slider" min="2" max="100" value="16" oninput="sliderFun(this.value)">
             <div id="value">16</div>
         </div>
     </div>
