--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="banner">etch a sketch</div>
 
     <div class="btns">
-        <input type="button" value="reset" class="btn">
+        <input type="button" value="reset" class="btn" onclick="resetFun()">
         <input type="button" value="black" class="btn">
         <input type="button" value="RGB" class="btn">
         <input type="color" id="colorpicker" value="#e07a5f" class="btn">
